--- a/03-Representation/source.tex
+++ b/03-Representation/source.tex
@@ -1,6 +1,5 @@
 \chapter{Méthodes de représentation et d'analyse de l'architecture CxSOM}
 \graphicspath{{03-Representation/}}
-
 \minitoc
 
 Dans le chapitre précédent, nous avons proposé l'algorithme cxSOM permettant de construire des architectures non-hiérarchiques de cartes auto-organisatrices. Parallèlement à l'objectif d'une SOM, qui consiste à effectuer de la quantification vectorielle sur un espace d'entrée, l'objectif d'une architecture de SOM est de faire de la quantification vectorielle sur plusieurs espaces d'entrées et d'apprendre les relations au sein de ces entrées. C'est ce qu'on appelle mémoire associative. Le but de cette thèse est d'analyser dans quelle mesure, et de quelle façon un tel apprentissage se déroule grâce au modèle CxSOM. Avant de développer cette analyse, il nous faut poser les indicateurs et les méthodes de représentations permettant de caractériser l'apprentissage.
@@ -299,7 +298,8 @@ Ce coefficient n'est pas symétrique, et mesure donc l'information portée par l
 %TODO : calculer et comparer les valeurs pour le cas du cercle.
 
  
-Ce coefficient peut être élargi à plus de variables. On peut ainsi calculer $I_x(U | (\bmu\m{1},\bmu\m{2},\bmu\m{3}))$ pour 3 cartes, en considérant la variable jointe $(\bmu\m{1},\bmu\m{2},\bmu\m{3})$.
+Ce coefficient peut être élargi à plus de variables.
+On peut ainsi calculer $I_x(U | (\bmu\m{1},\bmu\m{2},\bmu\m{3}))$ pour 3 cartes, en considérant la variable jointe $(\bmu\m{1},\bmu\m{2},\bmu\m{3})$.
 Plus largement, pour prouver qu'on a bien appris un modèle, on souhaite que $UC(U|\bmu\m{1},\cdots,\bmu\m{k})$ soit le plus proche possible de 1.
 
 \comment{Qu'est ce que l'information portée par plusieurs variables représente dans le cas du cercle !}
