chapitre représentation et modularité, travail en cours

--- a/03-Representation/biblio_representation.bib
+++ b/03-Representation/biblio_representation.bib
@@ -92,3 +92,10 @@
   journal={Birchandra State Central Library,tripura},
   year={1961}
 }
+
+@inproceedings{Doquire2012ACO,
+  title={A Comparison of Multivariate Mutual Information Estimators for Feature Selection},
+  author={Gauthier Doquire and Michel Verleysen},
+  booktitle={ICPRAM},
+  year={2012}
+}
