--- a/04-Analyse/source.tex
+++ b/04-Analyse/source.tex
@@ -1,4 +1,4 @@
-\chapter{Analyse de l'organisation de CxSOM}
+\chapter{Analyse de l'organisation de CxSOM}\label{chap:analyse}
 \graphicspath{{04-Analyse/}}
 \minitoc
 \section{Analyse de la relaxation}
