--- a/05-Application/source.tex
+++ b/05-Application/source.tex
@@ -24,7 +24,7 @@ Dans un premier temps, le modèle est connu: on présente des entrées $(X,Y,Z)$
 
 \subsection{Résultats}
 
-La figure \ref{fig:pred} représente la valeur de la prédiciton $\w\ext\m{1}(\bmu\m{1})$ en fonction de la valeur théorique de cette entrée. 
+La figure \ref{fig:pred} représente la valeur de la prédicton $\w\ext\m{1}(\bmu\m{1})$ en fonction de la valeur théorique de cette entrée. 
 \begin{figure}
 \centering
 \includegraphics[width=\textwidth]{prediction_x2}
@@ -37,6 +37,7 @@ La figure \ref{fig:pred} représente la valeur de la prédiciton $\w\ext\m{1}(\b
 Les résultats sur des entrées géométriques montrent une bonne capacité de prédiction d'entrée.
 La précision est limitée, mais on peut voir cette capacité de prédiction plus comme une preuve de mémoire associative que d'application pratique.
 Ce qu'on cherche par la mémoire associative, c'est d'abord d'évoquer une modalité à partir d'autres. Ici, grâce à la connexion entre carte, on génère une zone de valeur limitée pour la modalité $X$: une région est activée, qui est reliée aux valeurs de $X$.
+On va plutot parler d'évocation plutot que de prédiction. 
 
 \section{Application à la commande de drône en vol}
 
