--- a/03-Representation/source.tex
+++ b/03-Representation/source.tex
@@ -2,16 +2,25 @@
 \graphicspath{{03-Representation/}}
 \minitoc
 
-Dans le chapitre précédent, nous avons proposé l'algorithme cxSOM permettant de construire des architectures non-hiérarchiques de cartes auto-organisatrices. Parallèlement à l'objectif d'une SOM, qui consiste à effectuer de la quantification vectorielle sur un espace d'entrée, l'objectif d'une architecture de SOM est de faire de la quantification vectorielle sur plusieurs espaces d'entrées et d'apprendre les relations au sein de ces entrées. C'est ce qu'on appelle mémoire associative. Le but de cette thèse est d'analyser dans quelle mesure, et de quelle façon un tel apprentissage se déroule grâce au modèle CxSOM. Avant de développer cette analyse, il nous faut poser les indicateurs et les méthodes de représentations permettant de caractériser l'apprentissage.
-Ce chapitre a pour but d'étudier  l'organisation d'une architecture simple, tout en indroduisant les méthodes et les représentations que nous utiliserons par la suite. Nous présenterons donc la méthode expérimentale sur une architectures de deux cartes, et observerons son comportement grâce à différents modes de représentations. Nous introduirons également un indicateurs caractérisant l'organisation d'une architecture, basé sur l'information mutuelle.
+Dans le chapitre précédent, nous avons proposé l'algorithme CxSOM permettant de construire des architectures non-hiérarchiques de cartes auto-organisatrices.
+Parallèlement à l'objectif d'une SOM, qui consiste à effectuer de la quantification vectorielle sur un espace d'entrée, l'objectif d'une architecture de SOM est de faire de la quantification vectorielle sur plusieurs espaces d'entrées et d'apprendre les relations entre ces entrées.
+C'est ce qu'on appelle mémoire associative. Le but de cette thèse est d'analyser dans quelle mesure, et de quelle façon un tel apprentissage se déroule grâce au modèle CxSOM.
+
+En utilisant une architecture sur ces entrées, on a deux objectifs. D'abord, on cherche à ce que chaque carte joue un rôle similaire à celui d'une carte de Kohonen classique, par rapport à son entrée externe.
+Chaque carte prise séparément doit donc avoir appris une représentation de son espace d'entrée, en présentant une continuité entre les prototypes.
+Ensuite, on souhaite aussi que le modèle liant les entrées soit appris par l'architecture. Cet aspect est nouveau:
+nous introduirons des modes de représentation cherchant à définir l'existence d'un apprentissage du modèle, et comment le mesurer.
+
+Ce chapitre a pour but d'étudier l'organisation d'une architecture simple, tout en indroduisant les méthodes et les représentations que nous utiliserons par la suite.
+Nous présenterons la méthode expérimentale sur une architectures de deux cartes, et observerons son comportement grâce aux différents modes de représentations.
+Nous introduirons également un indicateur caractérisant l'organisation d'une architecture, consruit à partir de l'information mutuelle.
 
 \section{Présentation de l'expérience}
 
-Nous étudierons l'organisation d'une architecture de deux cartes. L'architecture est illustrée en figure~\ref{fig:exp}: elle est composée de deux cartes en une dimension, chacune étant connectée à sa voisine. C'est à dire, la carte $M\m{1}$ prend en entrée contextuelle la position du BMU de $M\m{2}$, et inversement.
-Chaque carte prend également une entrée externe. Il s'agit de $\inpx\m{1}=x$ et $\inpx\m{2}=y$, les coordonnées de points 2D sur un cercle. Ces deux modalités sont dépendantes: pour une valeur de $x$, seule deux valeurs sont possible pour $y$, et symétriquement.
-En utilisant une architecture sur ces deux entrées, on a deux objectifs. D'abord, on cherche à ce que chaque carte effectue de la quantification vectorielle sur son entrée externe. Chaque carte prise séparément doit donc représenter son espace d'entrée similairement à une carte de Kohonen classique. Ensuite, on souhaite que le modèle liant les entrées soit appris par l'architecture. 
-Nous chercherons donc comment définir l'existence de apprentissage du modèle, et comment le mesurer.
-Les entrées externes sont normalisées entre 0 et 1. Les deux cartes sont des lignes 1D de 500 noeuds. Les rayons de voisinage sont $h_e = 0.2$ et $h_c = 0.02$. 
+Nous étudierons dans ce chapitre l'organisation d'une architecture de deux cartes. L'architecture est illustrée à droite en figure~\ref{fig:exp}: elle est composée de deux cartes en une dimension. Chaque carte prend une entrée externe. Il s'agit de $\inpx\m{1}=x$ et $\inpx\m{2}=y$, les coordonnées de points 2D sur un cercle. Ces deux modalités sont dépendantes: pour une valeur de $x$, seule deux valeurs sont possible pour $y$, et symétriquement. Les entrées sont représentées sur le schéma de gauche, figure~\ref{fig:exp}.
+Ces entrées externes sont normalisées entre 0 et 1. Les deux cartes sont des lignes 1D de 500 noeuds. Les rayons de voisinage sont $h_e = 0.2$ et $h_c = 0.02$.
+Chacune des deux cartes est également connectée à sa voisine, c'est à dire, la carte $M\m{1}$ prend en entrée contextuelle la position du BMU de $M\m{2}$, et inversement.
+
 
 \begin{figure}
 \begin{minipage}{0.4\textwidth}
@@ -21,15 +30,13 @@ Les entrées externes sont normalisées entre 0 et 1. Les deux cartes sont des l
 \begin{minipage}{0.6\textwidth}
 \includegraphics[width=\textwidth]{2som_archi}
 \end{minipage}
-\label{fig:exp}
-\caption{Disposition des entrée, sous forme de cercle, à gauche, et architecture de deux cartes en une dimension étudiée et représentée dans ce chapitre.}
+\caption{Disposition des entrée, sous forme de cercle, à gauche, et architecture de deux cartes en une dimension étudiée et représentée dans ce chapitre.\label{fig:exp}}
 \end{figure}
 \section{Représentation des cartes de Kohonen}
-
 \subsection{Représentations et indicateurs classique des cartes de Kohonen}
 
-Les cartes de Kohonen sont particulièrement associées à une facilité de représentation et de visualisation. En effet, leur nombre réduit de prototypes et leur aspect topologique permet d'en tracer une représentation visuelle interprétable.
-La manière la plus coramment utilisée de représenter une carte de Kohonen est de tracer les poids de ses prototypes, disposés dans le graphe (ligne ou grille) qu'est la carte. En fonction des dimensions des entrées, cette représentation prennent plusieurs formes. Deux exemples courants de représentation sont les suivants: 
+Les cartes de Kohonen sont particulièrement associées à une facilité de représentation et de visualisation. Leur nombre réduit de prototypes et leur aspect topologique permet d'en tracer une représentation visuelle interprétable.
+La manière la plus couramment utilisée de représenter une carte de Kohonen est de tracer les poids de ses prototypes, disposés dans le graphe (ligne ou grille) qu'est la carte. En fonction des dimensions des entrées, cette représentation prennent plusieurs formes. Deux exemples courants de représentation sont les suivants: 
 \begin{itemize}
 \item Le graphe qu'est la carte de Kohonen est représenté dans l'espace de ses positions (la grille d'indices $(i,j)$, ou une ligne indexée par $i$. Sur chaque noeud est tracé le poids correspondant. C'est le cas sur l'exemple de gauche en figure~\ref{fig:representation} dans lequel les poids des prototypes, qui sont des imagettes, sont affichés en chaque point de la grille. Si la dimension d'un poids est trop grande pour être représentée graphiquement, il est également courant d'étiquetter chaque prototype et d'afficher ces étiquettes sur les noeuds de la carte, en tant que représentation.
 \item Lorsque les données traitées sont des points deux ou trois dimensions, les poids des prototypes peuvent être directement tracés dans l'espace $\mathbb{R}^2$ ou $\mathbb{R}^3$. Ces poids sont alors reliés en fonction des positions des noeuds dans la carte, montrant ainsi la déformation de la carte dans l'espace d'entrée, c'est le cas sur l'exemple de droite en figure~\ref{fig:representation}.
@@ -211,7 +218,7 @@ $U$ apparaît alors comme une fonction de la position du BMU $\bmu\m{i}$ dans ch
 \subsubsection{Conclusion}
 La représentation de $U$ selon la position du BMU d'une carte $\bmu\m{i}$ permet de représenter comment la carte $i$ a appris l'ensemble d'entrées $(\inpx\m{1},\inpx\m{2})$ et non seulement son entrée externe.
 
-\subsection{Dépliement d'une carte en plusieurs dimensions}
+\draft{\subsection{Dépliement d'une carte en plusieurs dimensions}
 
 \subsubsection{Méthode}
 Nous avons vu qu'analyser le comportement d'une carte en fonction de toutes les entrées est un moyen de mieux comprendre la représentation interne qu'a une architecture sur le modèle d'entrée.
@@ -239,6 +246,7 @@ Cette représentation est limitée par la dimension des entrées, mais elle peut
 Par ailleurs, l'étude du comportement de cartes sur des données 3D s'inscrit dans la démarche de construction d'un modèle que nous suivons dans cette thèse. Leur visualisation est alors un élément clé dans la compréhension des comportements possibles de l'architecture. A partir de cette visualisation, on peut envisager de construire des indicateurs permettant l'analyse de l'architecture en dimension supérieure. 
 
 Le second avantage de ces tracés est qu'il est possible de représenter graphiquement une carte qui ne prend pas d'entrée externe, ou de représenter une carte dans l'espace des poids d'autres cartes.
+}
 
 \section{Information mutuelle comme indicateur statistique}
 
@@ -292,50 +300,33 @@ Nous définissons donc un indicateur de la relation entre $U$ et un BMU comme:
 \begin{equation}
 I_x(U|\bmu) = \frac{I(\bmu,U)}{H(U)}
 \end{equation}
-Ce coefficient n'est pas symétrique, et mesure donc l'information portée par le premier terme sur le second, relativement à la valeur maximale qu'elle peut prendre. Dans le cas des cartes CxSOM, $UC \in [0,1]$. Cette valeur rappelle le \emph{coefficient d'incertitude} entre $U$ et $\Pi$, ou $U$ de Theil \cite{Theil1961EconomicFA}.
+Ce coefficient n'est pas symétrique, et mesure donc l'information portée par le premier terme sur le second, relativement à la valeur maximale qu'elle peut prendre. Dans le cas des cartes CxSOM, $I_x \in [0,1]$. Cette valeur rappelle le \emph{coefficient d'incertitude} entre $U$ et $\Pi$, ou $U$ de Theil \cite{Theil1961EconomicFA}.
 
 %TODO : développer ce point : information portée par plus de variables !
 %TODO : calculer et comparer les valeurs pour le cas du cercle.
 
- 
-Ce coefficient peut être élargi à plus de variables.
-On peut ainsi calculer $I_x(U | (\bmu\m{1},\bmu\m{2},\bmu\m{3}))$ pour 3 cartes, en considérant la variable jointe $(\bmu\m{1},\bmu\m{2},\bmu\m{3})$.
-Plus largement, pour prouver qu'on a bien appris un modèle, on souhaite que $UC(U|\bmu\m{1},\cdots,\bmu\m{k})$ soit le plus proche possible de 1.
+Ce coefficient peut être élargi à plus de variables: on peut calculer $I_x(U | (\bmu\m{1},\bmu\m{2},\bmu\m{3}))$ pour 3 cartes, en considérant la variable jointe $(\bmu\m{1},\bmu\m{2},\bmu\m{3})$.
+Plus largement, pour prouver que l'archictecture a appris un modèle, on souhaite que $I_x(U|\bmu\m{1},\cdots,\bmu\m{k})$ soit le plus proche possible de 1.
 
 \comment{Qu'est ce que l'information portée par plusieurs variables représente dans le cas du cercle !}
 
-\subsection{Estimation}
+\subsection{Evolution de l'information entre deux cartes}
+
+\subsubsection{Estimation}
 L'information mutuelle et l'entropie sont des grandeurs probabilistes. Elles sont définies à partir de la distribution des variables aléatoire. Lorsque qu'on ne connait pas les distributions, il est nécessaire d'estimer ces valeurs autrement. 
 Une première façon d'estimer l'entropie et l'information mutuelle entre $X$ et $Y$ est d'estimer la distribution des variables $X$,$Y$ et leur distribution jointe $Z = (X,Y)$ en discrétisant l'espace par \emph{binning}, représenté en figure~\ref{fig:binning}. Les variables X et Y sont donc discrétisées en \emph{boîtes} de centres $x_k$ et $y_k$. La distribution de X est alors estimée par: 
 $$P(X = x_i) = \frac{n_{xi}}{N} $$, où $n_{xi}$ est le nombre d'échantillons de X tombant dans la boîte de valeur $x_i$ et $N$ le nombre de points. Le même procédé est réalisé pour $Y$ et $Z = (X,Y)$.
-L'information mutuelle par binning est calculée à partir de ces distributions discrètes.
-\draft{Lorsque la dimension des variables est faible (typiquement 1D), l'estimateur est ?? (fiable ?? comment)}
-Des termes de corrections peuvent être apportés. La précision de l'estimation peut être améliorée en choisissant des tailles de boîtes variables. Cependant, lorsque la dimension augmente, le nombre d'échantillon disponibles doit augmenter exponentiellement avec la dimension des variables pour éviter le phénomène de "boîtes vides": à cause de la dispersion des données, de nombreuses boîte $(x_j,y_i)$ ne contiendront pas de points alors qu'elles auraient du en contenir selon leur distribution; l'estimation de la probabilité en ce point sera donc nulle, et l'indicateur faussé. 
-
-Un autre estimateur que le binning est l'estimation par noyaux de Kraskov \cite{2004kraskov}. Cet estimeur passe par une estimation diecte de l'entropie au lieu des densités de probabilités. Le découpage de l'espace se fait en recherchant, pour un couple $(X,Y)$ les k plus proches voisins. Une information mutuelle locale est calculée dans cette zone de l'espace, suivant une formule permettant d'approximer les différences de logarithme par la fonction digamma $\psi$ : 
-$$i_j(X,Y) = \psi(k) - \psi(n_{x_j} + 1) - \psi(n_{y_j} +1) + \psi(N)$$
-Cette information mutuelle locale est ensuite moyennée sur l'ensemble des points: 
-$$\hat{I}(X,Y) = \psi(k) - \langle\psi(n_{x_j} + 1) + \psi(n_{y_j} +1)\rangle + \psi(N)$$
-Cet estimateur est meilleur que le binning, car il ?? 
-Il permet également d'éviter les boîtes vides du binning, car on n'explorera que l'espace des points. Il semble donc préférable d'utiliser cet estimateur en plus grande dimension.
-L'estimation de $UC(X|Y)$ nécessite d'estimer $I(X,Y)$ et $H(Y)$ : leur estimation doit être réalisée dans les mêmes conditions.
-
-L'information mutuelle et l'entropie étant des quantités fondamentales en théorie de l'information, il existe de nombreuses méthodes d'estimations de ces valeurs malgré la difficulté qu'elle pose. On peut notamment citer~\cite{Belghazi2018MutualIN}, qui utilise une approche neuronale pour estimer l'information mutuelle. Ainsi, l'utilisation du coefficient d'incertitude comme indicateur semble réutilisable pour des données de plus grande dimension ou pour plus de cartes, quitte à utiliser des méthode d'estimations plus élaborées. 
-
+L'information mutuelle par binning est estimée à partir de ces distributions discrètes:
+\begin{equation}
+    I_x(X,Y) = \sum_{i = 0}^{n_x} \sum_{j=0}^{n_y} {P(x_i,y_j)\textrm{log}\left(\frac{P(x_i,y_j)}{P(x_i)P(y_j)}\right)}
+   \end{equation}
+Des termes de corrections peuvent être apportés. La précision de l'estimation peut être améliorée en choisissant des tailles de boîtes variables. 
 \begin{figure}
-\begin{minipage}{0.45\textwidth}
 \centering
-\includegraphics[width=0.9\textwidth]{boxes}
-\caption{Procédé de binning pour estimer les distributions des variables $X$ et $Y$. Les distributions sont estimées à partir de $n_{xj}$, $n_{yi}$ et $n_z{ij}$, puis les valeurs de $H$ et $I$ calculées.}
+\includegraphics[width=0.45\textwidth]{boxes}
+\caption{Procédé de binning pour estimer les distributions des variables $X$ et $Y$. Les distributions sont estimées à partir de $n_{xj}$, $n_{yi}$ et $n_{zij}$, puis les valeurs de $H$ et $I$ calculées.}
 \label{fig:binning} 
-\end{minipage}
-\hfill
-\begin{minipage}{0.45\textwidth}
-\centering
-\includegraphics[width=0.7\textwidth]{kraskov.pdf}
-\caption{Découpage en KNN de Kraskov pour estimer l'entropie et l'information mutuelle des variables $X$ et $Y$. Les plus proches voisins du point rouge sont trouvés, en vert, et le processus est répété sur tous les points. Les valeurs de $n_x$ et $n_y$ permettent d'estimer directement l'entropie.}
-\label{fig:kraskov}
-\end{minipage}
+
 \end{figure}
 
 %\begin{figure}
@@ -345,39 +336,35 @@ L'information mutuelle et l'entropie étant des quantités fondamentales en thé
 %\label{fig:im} 
 %\end{figure}
 
-\subsection{Evolution de l'information entre deux cartes}
-
-Analysons à présent comment l'information mutuelle évolue au cours de l'apprentissage dans un système de deux cartes apprenant sur le cercle en deux dimensions. L'objectif est de ramener l'évolution de l'information mutuelle 
+\subsubsection{Information mutuelle sur deux cartes}
+Analysons à présent comment l'information mutuelle évolue au cours de l'apprentissage dans un système de deux cartes apprenant sur le cercle en deux dimensions.
 
 Pour cette expérience, une phase de test sur 5000 entrées test est réalisée toutes les 10 itérations, puis toutes les 200 itérations à partir de l'itération 200. Chaque phase de test donne alors un ensemble d'entrées $\inpx\m{1}, \inpx\m{2}, U$ et un ensemble de réponses des cartes $\bmu\m{1}, \bmu\m{2}$. On peur alors estimer $I_x(U|\bmu\m{1})$ et $I_x(U|\bmu\m{2})$ sur chaque itération considérée, ce qui nous donne la courbe de l'évolution de l'indicateur au long de l'apprentissage. 
 Ces calculs sont réalisés sur 100 apprentissages complets, prenant des entrées d'apprentissage aléatoires sur le même cercle. Les cartes sont initialisées à des poids aléatoires au début de chaque apprentissage. 
 Les tracés présentés en figure~\ref{fig:MI_evol}, sont la moyenne, à chaque pas de temps, de l'information mutuelle de chaque expérience au pas de temps $t$. On représente donc l'évolution de l'information mutuelle en moyenne. 
 
-Comme pour les tracés présentés dans les sections précédentes, on souhaite comparer l'évolution de l'indicateur dans l'architecture CxSOM par rapport à l'évolution pour une carte simple. La même méthode est utilisée pour tracer l'évolution de l'information mutuelle moyenne dans une carte simple, apprenant sur le même espace d'entrée.
+Nous comparons les valeurs obtenues pour une carte de CxSOM à celles d'une carte apprenant sur les mêmes entrées $\inpx\m{1}$ ou $\inpx\m{2}$, mais sans connexions entre elles. On s'attend à ce que l'information soit plus élevée pour la carte au sein de CxSOM que la carte seule, ce qui montrerait que la carte porte aussi de l'information sur l'autre entrée. On s'attend à ce que cette valeur atteigne 1, ce qui montrerait qu'une seule carte porte de l'information sur tout le modèle: $U$ est une fonction de $\bmu$ dans chaque carte.
 
-L'estimation est d'abord réalisée par le processus de binning. On choisit une taille de boite de 50 pour $U$ et 500 pour $\bmu\m{i}$; de cette façon, les points correspondant à des $U$ très proches seront comptés ensemble pour l'estimation de l'information.
+L'estimation est réalisée par le processus de binning. On choisit une taille de boite de 50 pour $U$ et 500 pour $\bmu\m{i}$; de cette façon, les points correspondant à des $U$ très proches seront comptés ensemble pour l'estimation de l'information.
+
+L'observation du tracé montre qu'en effet, les informations mutuelles $I_x(U|\bmu\m{1})$ et $I_x(U|\bmu\m{2})$ sont toutes deux plus élevées à chaque moment de l'apprentissage que dans le cas ou les cartes sont séparées. C'est également vrai au tout début de l'apprentissage: en effet, les BMUs étant calculés selon les poids contextuels et les poids externes
+
+Cette valeurs augment rapidement et se stabilisent autour de 0.8. Cette stabilisation correspond à la stabilisation des poids de l'architecture. La valeur de 1 n'est pas atteinte: $U$ tend vers une fonction de $\bmu$, mais 
 
 \begin{figure}
 \includegraphics[width=\textwidth]{evolution_MI_binning}
-\caption{Evolution du coefficient d'incertitude dans chaque carte au long de l'apprentissage. La courbe bleue correspond à $UC(U|\bmu)$ dans l'architecture de cartes $M\m{1}$ et $M\m{2}$. On compare cette évolution à l'évolution de l'information d'une seule carte apprenant sur les mêmes entrées $X$ ou $Y$, sans être connectée.}
+\caption{Evolution du coefficient d'incertitude dans chaque carte au long de l'apprentissage. La courbe bleue correspond à $I_x(U|\bmu)$ dans l'architecture de cartes $M\m{1}$ et $M\m{2}$. On compare cette évolution à l'évolution de l'information d'une seule carte apprenant sur les mêmes entrées $X$ ou $Y$, sans être connectée.}
 \label{fig:MI_evol}
 \end{figure}
 
 
 
 \subsection{Limites}
-
-Le coefficient d'incertitude mesure une forte relation statistique entre les données. Cela mesure bien ce qu'on apprend entre cartes; cependant, il ne prend pas en compte l'aspect continu des variables. Ainsi, prenons une distribution $X$ quelconque et deux distributions $Y_1$ et $Y_2$, telles que représentées en figure~\ref{fig:exemple-limite}.$Y_1$ et $X$ ne sont pas en bijection, mais ont une forte dépendance statistique: lorsqu'on connait la valeur de $X$, seules deux valeurs sont possibles pour $Y_1$.
-$Y_2$ et $X$ ne sont pas en bijection, mais en sont proches: leur relation est en fait une bijection, mais avec du bruit. Lorsqu'on analyse des données de CxSOM, les entrées sont généralement bruitées, tout comme les sorties. Par contre, on voudrait privilégier l'existence d'une dépendance forte entre entrées et sorties qui ne tiennent pas compte de ce bruit. Or, dans l'exemple cité, $UC(Y_1|X) = 0.6$ et $UC(Y_2|X) = 0.4$. L'indicateur n'est donc pas complètement approprié dans le cas de variables avec bruit.
+L'information mutuelle permet de mesurer mesure une relation statistique entre les données. Cela mesure bien ce qu'on apprend entre cartes; cependant, il ne prend pas en compte l'aspect continu des variables. Ainsi, prenons une distribution $X$ quelconque et deux distributions $Y_1$ et $Y_2$, telles que représentées en figure~\ref{fig:exemple-limite}. $Y_1$ et $X$ ne sont pas en bijection, mais ont une forte dépendance statistique: lorsqu'on connait la valeur de $X$, seules deux valeurs sont possibles pour $Y_1$.
+$Y_2$ et $X$ ne sont pas en bijection, mais en sont proches: leur relation est en fait une bijection, mais avec du bruit. Lorsqu'on analyse des données de CxSOM, les entrées sont généralement bruitées, tout comme les sorties. Par contre, on voudrait privilégier l'existence d'une dépendance forte entre entrées et sorties qui ne tiennent pas compte de ce bruit. Or, dans l'exemple cité, $I_x(Y_1|X) = 0.6$ et $I_x(Y_2|X) = 0.4$. L'indicateur n'est donc pas complètement approprié dans le cas de variables avec bruit.
 
 Afin de ne pas se situer dans la limite d'utilisation du coefficient d'incertitude sur des données bruitées, on privilégiera l'utilisation du binning pour l'estimation. On pourra alors régler la taille de la discrétisation selon $U$ pour autoriser le bruit. On réalisera également les tests sur des données non-bruitées, lorsque cela est possible.
 
-La figure \ref{fig:MI_evol} représente l'évolution du coefficient d'incertitude au cours de l'apprentissage des données prises sur le cercle 2D. Pour tracer la courbe, on effectue une phase de test toutes les 100 itérations de l'apprentissage, sur laquelle on calcule l'information $I_x(U|\bmu\m{1})$ et $I_x(U|\bmu\m{2})$. Ce processus est répété sur 50 apprentissages séparés; on trace l'évolution des valeurs moyennées sur ces 50 expériences.
-Nous comparons les valeurs obtenues pour une carte de CxSOM à celles d'une carte apprenant sur les mêmes entrées $\inpx\m{1}$ ou $\inpx\m{2}$, mais sans connexions. On s'attend à ce que l'information soit plus élevée pour la carte au sein de CxSOM que la carte seule, ce qui montrerait que la carte porte aussi de l'information sur l'autre entrée. On s'attend à ce que cette valeur atteigne 1, ce qui montrerait qu'une seule carte a en fait appris tout le modèle et que $U$ est une fonction de $\bmu$ dans chaque carte.
-
-L'observation du tracé montre qu'en effet, les informations mutuelles $I_x(U|\bmu\m{1})$ et $I_x(U|\bmu\m{2})$ sont toutes deux plus élevées à chaque moment de l'apprentissage que dans le cas ou les cartes sont séparées. C'est également vrai au tout début de l'apprentissage: en effet, les BMUs étant calculés selon les poids contextuels et les poids externes
-
-Cette valeurs augment rapidement et se stabilisent autour de 0.8. Cette stabilisation correspond à la stabilisation des poids de l'architecture. La valeur de 1 n'est pas atteinte: $U$ tend vers une fonction de $\bmu$, mais 
 
 \begin{figure}
 \centering
@@ -386,7 +373,26 @@ Cette valeurs augment rapidement et se stabilisent autour de 0.8. Cette stabilis
 \label{fig:exemple-limite}
 \end{figure}
 
-On trace l'évolution de l'information mutuelle moyenne, cette fois estimée par la méthode de kraskov. L'entropie de $U$ est estimée en prenant $I(U,U)$ par la méthode de Kraskov, avec les mêmes paramètres. 
+\begin{figure}
+        \centering
+        \includegraphics[width=0.35\textwidth]{kraskov.pdf}
+        \caption{Découpage en KNN de Kraskov pour estimer l'entropie et l'information mutuelle des variables $X$ et $Y$. Les plus proches voisins du point rouge sont trouvés, en vert, et le processus est répété sur tous les points. Les valeurs de $n_x$ et $n_y$ permettent d'estimer directement l'entropie.}
+        \label{fig:kraskov}
+\end{figure}
+Cependant, lorsque la dimension augmente, le nombre d'échantillon disponibles doit augmenter exponentiellement avec la dimension des variables pour éviter le phénomène de "boîtes vides": à cause de la dispersion des données, de nombreuses boîte $(x_j,y_i)$ ne contiendront pas de points alors qu'elles auraient du en contenir selon leur distribution; l'estimation de la probabilité en ce point sera donc nulle, et l'indicateur faussé. 
+
+Nous avons donc envisagé d'autres estimateurs moins biaisés en grand dimension. Détaillons par exemple l'estimateur par KNN (K-nearest neighbors) de Kraskov \cite{2004kraskov}. Cet estimeur passe par une estimation diecte de l'entropie au lieu des densités de probabilités. Le découpage de l'espace se fait en recherchant, pour un couple $(X,Y)$ les k plus proches voisins. Une information mutuelle locale est calculée dans cette zone de l'espace, suivant une formule permettant d'approximer les différences de logarithme par la fonction digamma $\psi$ : 
+$$i_j(X,Y) = \psi(k) - \psi(n_{x_j} + 1) - \psi(n_{y_j} +1) + \psi(N)$$
+Cette information mutuelle locale est ensuite moyennée sur l'ensemble des points: 
+$$\hat{I}(X,Y) = \psi(k) - \langle\psi(n_{x_j} + 1) + \psi(n_{y_j} +1)\rangle + \psi(N)$$
+
+Cet estimateur ne passe pas par l'estimation de la densité de probabilité, contrairement au binning, ce qui pose problème en grade dimension. Il semble donc préférable d'utiliser par exemple cet estimateur en plus grande dimension.
+L'estimation de $I_x(X|Y)$ nécessite d'estimer $I(X,Y)$ et $H(Y)$ : leur estimation doit être réalisée dans les mêmes conditions.
+
+L'information mutuelle et l'entropie étant des quantités fondamentales en théorie de l'information, il existe de nombreuses méthodes d'estimations de ces valeurs malgré la difficulté qu'elle pose, voir~\cite{Doquire2012ACO} pour une revue de différentes méthodes. On peut aussi citer~\cite{Belghazi2018MutualIN}, qui utilise une approche neuronale pour estimer l'information mutuelle. Ainsi, l'utilisation du coefficient d'incertitude comme indicateur reste robuste pour des données de plus grande dimension ou pour plus de cartes, en utilisant des méthode d'estimations plus élaborées. 
+
+Comparons également les deux méthodes d'estimation de l'information mutuelle proposées précédemment: l'estimation par binning, et l'estimation par KNN de Kraskov.
+On trace l'évolution de l'information mutuelle moyenne, cette fois estimée par la méthode de kraskov. L'entropie de $U$ est estimée en calculant $I(U,U)$ par la méthode de Kraskov, avec les mêmes paramètres. 
 La méthode des noyaux de Kraskov est plus granulaire que le binning au niveau de l'estimation. L'avantage est que l'évaluation de la relation fonctionnelle entre $U$ et $\bmu\m{i}$ est plus précise qu'avec le binning: s'il y a deux valeurs de $U$ pour un même $\bmu\m{i}$, l'information diminue. Par contre, la contribution de ces deux valeurs est la même pour l'information mutuelle, qu'elles soient proches ou très différentes. Cela a moins de sens dans le cas de notre application: on veut que $U$ et $\bmu$ se rapproche d'une relation fonctionnelle, mais du bruit est toléré. 
 
 Sur les tracés, l'indicateur calculé avec la méthode de Kraskov converge vers une même valeur pour la carte simple que pour la carte dans CxSOM. 
@@ -397,9 +403,18 @@ Sur les tracés, l'indicateur calculé avec la méthode de Kraskov converge vers
 \label{fig:MI_evol_total}
 \end{figure}
 
-\subsection{Correlation ratio ?}
+\subsection{Perspectives}
+\begin{itemize}
+    \item L'information mutuelle est un estimateur qui traduit bien la façon dont les cartes ont appris les relations entre entrée
+    \item Limité dès que les données sont bruitées; on peut choisir les paramètres de l'estimateur par binning pour ne pas prendre en compte ce bruit, mais en grande dimension il n'est plus utilisable.
+    \item L'estimation -- et l'indicateur en lui même devra être affinée en plus grande dimension pour être capable de considérer des données bruitées. 
+\end{itemize}
+
+\draft{
+\subsection{Autre indicateur: le ratio de core}
 
 L'indicateur correlation ration permet de mesurer la distance d'une distribution à la fonction qui la fitte. Cela correspond bien à ce qu'on cherche dans CxSOM, mais estimation complexe aussi en grand dimension. 
+}
 
 \section{Conclusion}
 \begin{itemize}
@@ -408,6 +423,8 @@ L'indicateur correlation ration permet de mesurer la distance d'une distribution
 \item Perte de précision au niveau de la quantification des poids externes, mais apprentissage d'un modèle. Nécessité de faire un compromis, réalisé de façon auto-organisée. Chaque carte a alors appris le modèle en entier et non seulement son entrée.
 \item Utilisation d'un indicateur basé sur l'info mutuelle pour évaluer comment une carte apprend le modèle. Indicateur pouvant être utile en grande dimension ; mais l'estimation peut poser problème à ce moment.
 \end{itemize}
+
+
 \comment{Correlation ration : mesure de dépendance fonctionnelle
 Débruitage de l'IM : répétition de l'expérience et moyenne ?}
 \draft{Le ration de corrélation traduit mieux que le coefficient d'incertitude la dépendance fonctionnelle entre le modèle et le BMU. Cependant, à l'inverse de l'information mutuelle, une relation non fonctionnelle mais précise (telle que l'exemple du cercle de la figure~\ref{fig:exemple-limite}) entre les variables aura un score très faible. Ce n'est pas non plus voulu. 
