--- a/03-Representation/biblio_representation.bib
+++ b/03-Representation/biblio_representation.bib
@@ -116,3 +116,21 @@
 	annote = {Comment: 14 pages, 9 figures},
 	file = {Williams et Beer - 2010 - Nonnegative Decomposition of Multivariate Informat.pdf:/home/noemie/Zotero/storage/URZP7NXV/Williams et Beer - 2010 - Nonnegative Decomposition of Multivariate Informat.pdf:application/pdf},
 }
+
+@article{Bosking1997OrientationSA,
+  title={Orientation Selectivity and the Arrangement of Horizontal Connections in Tree Shrew Striate Cortex},
+  author={William H Bosking and Y. Zhang and Brett R. Schofield and David Fitzpatrick},
+  journal={The Journal of Neuroscience},
+  year={1997},
+  volume={17},
+  pages={2112 - 2127}
+}
+
+@article{Maaten2008VisualizingDU,
+  title={Visualizing Data using t-SNE},
+  author={Laurens van der Maaten and Geoffrey E. Hinton},
+  journal={Journal of Machine Learning Research},
+  year={2008},
+  volume={9},
+  pages={2579-2605}
+}
