--- a/main.tex
+++ b/main.tex
@@ -59,7 +59,7 @@
 
 %\Drafttrue %switch to false if you want to get the release version.
 %\Draftfalse %switch to true if you want to get the draft version.
-\ifReview \usepackage[lmargin=5cm]{geometry}\fi
+%\ifReview \usepackage[lmargin=5cm]{geometry}\fi
 
 %def path for files
 \input{Notations.tex}
